--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,7 +10,7 @@ html {
 
 body {
   margin: 0;
-  background-color: whitesmoke;
+  background-color: #ffffff;
 }
 
 .centered {
@@ -19,4 +19,179 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 5; /* Ensure the overlay is above other content */
+}
+
+.createcampaignmodal {
+  display: flex;
+  width: 60%;
+  height: fit-content;
+  padding: 24px;
+  flex-direction: column;
+  /* align-items: flex-start; */
+  gap: 16px;
+  border-radius: 12px;
+  border: 1px solid var(--Schemes-Outline-Variant, #f5e0bb);
+  background: var(--Schemes-Surface-Bright, #fffbff);
+  z-index: 4;
+}
+.updatecampaignmodal {
+  display: flex;
+  width: 60%;
+  height: fit-content;
+  padding: 24px;
+  flex-direction: column;
+  /* align-items: flex-start; */
+  gap: 16px;
+  border-radius: 12px;
+  border: 1px solid var(--Schemes-Outline-Variant, #f5e0bb);
+  background: var(--Schemes-Surface-Bright, #fffbff);
+  z-index: 4;
+}
+
+.campaignpicture {
+  padding: 8px, 0px, 32px, 0px;
+  margin: 24px;
+  width: 35%;
+  border-radius: 12px;
+}
+.reviewpicture {
+  width: 15%;
+}
+
+.reviews {
+  display: flex;
+  width: 90%;
+  padding: 24px 24px;
+  flex-direction: column;
+  /* justify-content: center; */
+  /* align-items: center; */
+  gap: 8px;
+  border-radius: 12px;
+  border: 1px solid var(--Schemes-Outline-Variant, #cec3ce);
+  background: var(--Schemes-Surface, #faf3fc);
+  margin: 16px;
+  color: #000;
+}
+
+h3 {
+  font-family: Roboto;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+
+h4 {
+  color: #000;
+  /* M3/body/large */
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+  letter-spacing: 0.5px;
+  margin: 0px;
+}
+
+h6 {
+  /* M3/body/large */
+  font-family: Roboto;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  letter-spacing: 0.5px;
+  display: flex;
+  margin: 0px;
+  padding: 0px 24px;
+  /* justify-content: center;
+ align-items: center; */
+  align-self: stretch;
+}
+
+.rating {
+  width: 6%;
+}
+
+h1 {
+  color: #000;
+  font-family: Roboto;
+  font-size: 36px;
+  font-style: normal;
+  text-transform: uppercase;
+  font-weight: 600px;
+  letter-spacing: 5px;
+  line-height: 44px; /* 122.222% */
+  padding: 16px;
+  margin: 16px;
+}
+
+h2 {
+  color: #000;
+
+  /* M3/headline/medium */
+  font-family: Roboto;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 36px;
+  margin: 8px;
+  text-transform: uppercase;
+}
+
+p {
+  /* M3/body/large */
+  font-family: Roboto;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+  letter-spacing: 0.5px;
+  display: flex;
+  margin: 0px;
+  padding: 0px 24px;
+  /* justify-content: center;
+  align-items: center; */
+  gap: 8px;
+  align-self: stretch;
+}
+
+.campaigncard {
+  display: flex;
+  width: 90%;
+  flex-direction: column;
+  align-items: flex-center;
+  gap: 32px;
+  flex: 1 0 0;
+  /* border: solid 2px black; */
+  margin: 32px;
+}
+
+.wallet {
+  display: flex;
+  width: 90%;
+  padding: 24px 24px;
+  flex-direction: column;
+  /* justify-content: center; */
+  /* align-items: center; */
+  gap: 8px;
+  border-radius: 12px;
+  border: 1px solid var(--Schemes-Outline-Variant, #cec3ce);
+  background: var(--Schemes-Surface, #faf3fc);
+  margin: 16px;
+  color: #000;
 }
